# VirtualCPU

./: README.md
source/: CMakeLists.txt  README.md  android_entry.cc  main.cc  main.h
source/asm/x86/: assembler.cc  assembler.h  enums.h  label.h  managed_register.h  memory_region.cc  memory_region.h  offsets.h  value_object.h
source/asm/x86/64/: assembler_x86_64.cc  assembler_x86_64.h  (+4 more)
source/ast/: ast.cc  ast.h  block.cc  block.h  cfg.cc  cfg.h  expr.cc  expr.h  functions.cc  graph.cc  graph.h
source/backend/: constants.h  cpu.h  label_manager.cc  label_manager.h  register_manager.cc  register_manager.h  trampolines.h
source/backend/arm64/: block_linker.cc  block_linker.h  constants.h  host_callbacks.h  ir_translate_context.cc  ir_translate_logical.cc  ir_translate_memory.cc  ir_translate_simd.cc  ir_translate_status.cc  ir_translate_system.cc  ir_translator.cc  ir_translator.h  jit_context.cc  jit_context.h  label_manager.cc  label_manager.h  register_manager.cc  register_manager.h  svm_context.cc  trampolines.S  trampolines.cc
source/base/: array_ref.h  blocking_queue.h  cow_vector.h  file.h  intrusive_list.hpp  lru_container.h  marco.cc  marco.h  object_pool.h  simple_heap.h  slab_alloc.cc  slab_alloc.h
source/cache/: cache_module.cc  cache_module.h  cache_pool.cc  cache_pool.h  code_buffer.h  code_cache.h  dispatcher_table.h
source/frontend/: decoder.h  function_disam.cc  function_disam.h  visitor.h
source/frontend/arm32/: decoder.cc  decoder.h
source/frontend/x64/: cpu.h  decoder.cc  decoder.h  jit_visitor.cc  jit_visitor.h
source/function/: block.h  functions.cc  functions.h
source/include/: configs.h  memory_interface.h  page_entry.h  svm_cpu.h  svm_instance.h  types.h
source/ir/: assembler.cc  assembler.h  block.cc  block.h  instr_table.ir  instruction.cc  instruction.h  interpreter.cc  interpreter.h  operand.cc  operand.h
source/ir_opt/: const_folding_pass.cc  const_folding_pass.h  const_memory_read_pass.cc  const_memory_read_pass.h  context_promotion_pass.cc  context_promotion_pass.h  ctx_get_set_elimination.cc  ctx_get_set_elimination.h  dead_code_remove.cc  dead_code_remove.h  flags_get_set_elimination.cc  flags_get_set_elimination.h  flags_get_set_sync.cc  flags_get_set_sync.h  flags_set_elimination.cc  flags_set_elimination.h  instruction_id_clear.cc  instruction_id_clear.h  instruction_id_pass.cc  instruction_id_pass.h  ir_opt_manager.cc  ir_opt_manager.h  ir_opt_result.cc  ir_opt_result.h  optimize.h  register_alloc_pass.cc  register_alloc_pass.h  value_expr_fold.cc  value_expr_fold.h
source/memory/: memory_interface.h  page_entry.h  page_table.h
source/platform/: memory.cc  memory.h  unix_file.cc  unix_file.h
source/runtime/: basic_block.cc  block_translator.cc  block_translator.h  instance.cc  jit_runtime.cc  jit_runtime.h  jit_thread.cc  jit_thread.h  module_disk_cache.cc  module_disk_cache.h  page_table.h  vcpu.cc
(+11 files in other folders)
